force-app/main/default/objects/JBCXM__GSRelationship__c/fields/CSM_Health_Rating_Last_Modified_Grouping__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating_Last_Modified_Grouping__c</fullName>
    <formula>Product_Customer_ID__r.CSM_Health_Rating_Last_Modified_Grouping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Health Rating Last Modified Grouping</label>
    <type>Text</type>
</CustomField>