force-app/main/default/objects/JBCXM__GSRelationship__c/fields/CSM_Health_Rating_Previous__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating_Previous__c</fullName>
    <label>CSM Health Rating - Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>