force-app/main/default/objects/JBCXM__GSRelationship__c/fields/DNUT_CSM__c.field-meta.xml
<CustomField>
    <fullName>DNUT_CSM__c</fullName>
    <formula>Product_Customer_ID__r.CSM__r.FirstName&amp;&quot; &quot;&amp;Product_Customer_ID__r.CSM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNU T-CSM</label>
    <type>Text</type>
</CustomField>