force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Earliest_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Term_Start_Date__c</fullName>
    <formula>Product_Customer_ID__r.Earliest_Term_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Term Start Date</label>
    <type>Date</type>
</CustomField>