force-app/main/default/objects/JBCXM__GSRelationship__c/fields/JBCXM__GSCSMModel__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__GSCSMModel__c</fullName>
    <label>CSM Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>