force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Most_Recent_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Term_Start_Date__c</fullName>
    <formula>Product_Customer_ID__r.Most_Recent_Term_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Term Start Date</label>
    <type>Date</type>
</CustomField>