force-app/main/default/objects/JBCXM__GSRelationship__c/fields/PC_Total_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_Recurring_Amount__c</fullName>
    <label>PC Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>