force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Product_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Customer ID</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipName>GS_Relationship1370_rel</relationshipName>
    <type>Lookup</type>
</CustomField>