force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Product_Implementation_Phase__c.field-meta.xml
<CustomField>
    <fullName>Product_Implementation_Phase__c</fullName>
    <label>Product Implementation Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project not started yet</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Within 90 days of Production</fullName>
            </value>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>In Production - Deployed to End Users Firm Wide</fullName>
                <isActive>false</isActive>
                <label>In Production - Deployed to End Users Firm Wide</label>
            </value>
            <value>
                <fullName>In Production - Deployed to some End Users</fullName>
                <isActive>false</isActive>
                <label>In Production - Deployed to some End Users</label>
            </value>
            <value>
                <fullName>In Production - Not Deployed to End Users</fullName>
                <isActive>false</isActive>
                <label>In Production - Not Deployed to End Users</label>
            </value>
            <value>
                <fullName>Price Commitment</fullName>
                <isActive>false</isActive>
                <label>Price Commitment</label>
            </value>
            <value>
                <fullName>Trial - Competitive</fullName>
                <isActive>false</isActive>
                <label>Trial - Competitive</label>
            </value>
            <value>
                <fullName>Trial - Inactive</fullName>
                <isActive>false</isActive>
                <label>Trial - Inactive</label>
            </value>
            <value>
                <fullName>Trial - Non-Competitive</fullName>
                <isActive>false</isActive>
                <label>Trial - Non-Competitive</label>
            </value>
            <value>
                <fullName>Upgrade</fullName>
                <isActive>false</isActive>
                <label>Upgrade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>