force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Product_Line_new__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line.</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>GS Relationships</relationshipLabel>
    <relationshipName>GS_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>