force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_End_Date__c</fullName>
    <formula>Product_Customer_ID__r.Term_End_Date__c</formula>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>