force-app/main/default/objects/JBCXM__GSRelationship__c/fields/Total_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Amount__c</fullName>
    <formula>Product_Customer_ID__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>